force-app/main/default/objects/Continuation_Form__c/fields/Client_Names__c.field-meta.xml
<CustomField>
    <fullName>Client_Names__c</fullName>
    <label>Client Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>