force-app/main/default/objects/Continuation_Form__c/fields/Established_Wealth_Notes__c.field-meta.xml
<CustomField>
    <fullName>Established_Wealth_Notes__c</fullName>
    <label>Established Wealth</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>