force-app/main/default/objects/Continuation_Form__c/fields/Established_Wealth_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Established_Wealth_Picklist__c</fullName>
    <label>Established Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>