force-app/main/default/objects/Continuation_Form__c/fields/Full_details_of_the_ethical_consideratio__c.field-meta.xml
<CustomField>
    <fullName>Full_details_of_the_ethical_consideratio__c</fullName>
    <label>Full details of the ethical consideratio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>