force-app/main/default/objects/Continuation_Form__c/fields/Have_we_established_clients_funds_detail__c.field-meta.xml
<CustomField>
    <fullName>Have_we_established_clients_funds_detail__c</fullName>
    <label>Have we established clients funds detail</label>
    <type>TextArea</type>
</CustomField>