force-app/main/default/objects/Continuation_Form__c/fields/Have_we_established_clients_wealth_detai__c.field-meta.xml
<CustomField>
    <fullName>Have_we_established_clients_wealth_detai__c</fullName>
    <label>Have we established clients wealth detai</label>
    <type>TextArea</type>
</CustomField>