force-app/main/default/objects/Continuation_Form__c/fields/Have_we_established_the_client_s_source__c.field-meta.xml
<CustomField>
    <fullName>Have_we_established_the_client_s_source__c</fullName>
    <label>Have we established the client’s source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>