force-app/main/default/objects/Continuation_Form__c/fields/If_applicable_do_the_additional_details__c.field-meta.xml
<CustomField>
    <fullName>If_applicable_do_the_additional_details__c</fullName>
    <label>If applicable, do the additional details</label>
    <type>TextArea</type>
</CustomField>