force-app/main/default/objects/Continuation_Form__c/fields/If_applicable_do_the_additional_service__c.field-meta.xml
<CustomField>
    <fullName>If_applicable_do_the_additional_service__c</fullName>
    <label>If applicable, do the additional service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>