force-app/main/default/objects/Continuation_Form__c/fields/NI_and_or_UTR_number__c.field-meta.xml
<CustomField>
    <fullName>NI_and_or_UTR_number__c</fullName>
    <label>NI and/or UTR number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>