force-app/main/default/objects/Continuation_Form__c/fields/Other_safeguards_that_are_deemed_necessa__c.field-meta.xml
<CustomField>
    <fullName>Other_safeguards_that_are_deemed_necessa__c</fullName>
    <label>Other safeguards that are deemed necessa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>