force-app/main/default/objects/Continuation_Form__c/fields/Reason_for_update__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_update__c</fullName>
    <label>Reason for update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>