force-app/main/default/objects/Continuation_Form__c/fields/Services_are_to_be_carried_out_by_a_sepa__c.field-meta.xml
<CustomField>
    <fullName>Services_are_to_be_carried_out_by_a_sepa__c</fullName>
    <label>Services are to be carried out by a sepa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>