force-app/main/default/objects/Continuation_Form__c/fields/Type_of_non_audit_service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_non_audit_service__c</fullName>
    <label>Type of non-audit service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>